Setup project with Spring Boot, MongoDB, Swagger